# pyamgmt-django

./: .env.dev-local  .gitignore  README.md  compose.dev-local.yaml  dumpdata-core.sh  env.dev-local  manage.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  tsconfig.json  vite.config.ts
app/: dumpdata-core.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
app/accounts/: admin.py  models.py
app/accounts/migrations/: 0001_initial.py  0002_userxbeer_userxbeer_unique_user_x_beer.py  0003_alter_userxbeer_options.py
app/core/: admin.py  context_processors.py  tests.py  urls.py  validators.py
app/core/admin/: __init__.py  _inlines.py  account.py  asset.py  inlines.py  main.py  motion_picture.py  music.py  music_album.py  music_artist.py  person.py  record.py  song.py  vehicle.py  video_game.py
app/core/assets/: account.ts  clock.ts  music-vis.ts  vis.ts
app/core/forms/: __init__.py  admin.py  fields.py
app/core/migrations/: 0001_initial.py  0002_alter_person_date_of_birth_and_more.py  0002_alter_personxpersonrelation_relation.py  0002_alter_videogameplatform_name.py  0003_alter_accountasset_options_and_more.py  0003_alter_personxpersonrelationship_relationship.py  0003_musicartist_people.py  0003_person_gender.py  0004_alter_personxpersonrelationship_relationship.py  0004_business_alter_party_subtype_manufacturer_business_and_more.py  0004_musicalbumedition_song_recordings.py  0004_musicartist_disambiguator_alter_musicartist_name_and_more.py  0005_alter_videogameseries_name.py  0005_motionpicturexperson_notes.py  0005_musicalbum_cover_artwork_and_more.py  0005_musicrolexpersonxsong.py  0006_musicalbumxpersonxmusicrole_and_more.py  0006_photo_people.py  0006_videogameplatformregion.py  0007_person_musical_instruments.py  0007_remove_accountassetreal_asset_and_more.py  0007_videogamedeveloper_videogame_developer.py  0008_motionpicture_music_albums.py  0008_remove_assetdiscrete_account_asset_real.py  0008_remove_videogame_developer.py  0009_asset_account_asset_real.py  0009_motionpicture_notes.py  (+106 more)
app/pyamgmt/: asgi.py  env.py  middleware.py  settings.py  translation.py  urls.py  views.py
app/sandbox/: admin.py  models.py  views.py
app/schemaviz/: __init__.py  apps.py  urls.py  utils.py  views.py
app/static/: base.css  colors.css
app/templates/: base.html  home.html
(+388 files in other folders)
