[tool.poetry]
name = "pyamgmtdjango"
version = "0.1.0"
description = "An excessive personal finance and asset management suite."
authors = ["Ryan Jackson <supra621@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
psycopg = "^3.1.8"
pillow = "^9.5.0"
requests = "^2.28.2"
django-debug-toolbar = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
