[tool.poetry]
name = "pyamgmtdjango"
version = "0.1.0"
description = "An excessive personal finance and asset management suite."
authors = ["Ryan Jackson <supra621@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2"
django-debug-toolbar = "^4.2.0"
psycopg = "^3.1.13"
pillow = "^10.1"  # 10.x has an issue with python 3.12
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
